js/src/jit-test/tests/binast/invalid/identifier-assign-target.binjs
BINJS
[
GRAMMAR
]
identity
;
2AssertedScriptGlobalScope
(
AssignmentExpression4AssignmentTargetIdentifier
&
ExpressionStatement0LiteralNumericExpression
Script
[
STRINGS
]
identity
;
1
[
TREE
]
identity
;
&
